# game

./: CMakeLists.txt  README.md  compile_shaders.sh
assets/models/: plasma-bolt.glb  tile.glb
assets/models/blocks/default/: block-default.glb
assets/models/blocks/power/: block-power.glb
assets/models/ship/: ship.glb
assets/shaders/: basic.frag.spv  particle.comp.spv  particle.frag.spv  particle.vert  particle2.frag  particle2.frag.spv  sprite.frag  sprite.frag.spv  sprite.vert.spv
assets/sheets/: courier-new.json  menlo.json  shipgame-ui.json
cmake/: CopyAssets.cmake  Findcglm.cmake
gfxsrc/: block-default.glb  energy-ring.blend  game-ui.afdesign  ship.blend  ship2.blend  tile2.blend  tile3.blend  tile3.blend1
include/: aabb.h  application_context.h  camera.h  collision.h  debug_text_overlay.h  emitter.h  entity.h  imagedata.h  imagememory.h  joystick.h  kotlin.h  light.h  modeldata.h  renderresources.h  sound.h  unit_quad_vertices.h  vertex.h
include/pipelines/: compute_pipeline_config.h  pipeline_config.h  pipeline_shader_util.h  ubo_emitter.h  ubo_lighting.h  ubo_transform.h  ubo_update.h  viewport_util.h
include/pipelines/basic/: basic_pipeline.h  basic_pipeline_frag_descriptor_set_layout.h  basic_pipeline_layout.h  basic_pipeline_update_descriptor_sets.h
include/pipelines/debug/: debug_pipeline.h
include/pipelines/pfx/: particle.h  pfx_compute_pipeline_layout.h  pfx_pipeline.h  pfx_pipeline_update_descriptor_sets.h
include/pipelines/sprite/: sprite.h  sprite_pipeline.h  sprite_pipeline_config.h  sprite_pipeline_descriptor_pool.h  sprite_pipeline_frag_descriptor_set_layout.h  sprite_pipeline_layout.h  sprite_pipeline_renderpass.h  sprite_pipeline_update_descriptor_sets.h  text_sprite.h
include/vulkan/: buffer.h  commandbuffer.h  descriptor.h  framebuffer.h
kotlin-sdk/: build.gradle.kts  settings.gradle.kts
kotlin-sdk/cinterop/: lobby.h  model.def  model.h
kotlin-sdk/src/nativeMain/kotlin/com/fluxtah/application/api/: Application.kt  ApplicationContext.kt  Sound.kt  SoundPoolBuilder.kt
kotlin-sdk/src/nativeMain/kotlin/com/fluxtah/application/api/ai/: AiEntityStateMachine.kt  AiSchedule.kt  BooleanAlternator.kt  Timer.kt
kotlin-sdk/src/nativeMain/kotlin/com/fluxtah/application/api/collision/: CollisionHandler.kt
kotlin-sdk/src/nativeMain/kotlin/com/fluxtah/application/api/emitter/: Emitter.kt  EmitterBuilder.kt  EmitterPoolBuilder.kt
kotlin-sdk/src/nativeMain/kotlin/com/fluxtah/application/api/entity/: Entity.kt  EntityBuilder.kt  EntityPoolBuilder.kt  KtCollisionCallback.kt
kotlin-sdk/src/nativeMain/kotlin/com/fluxtah/application/api/file/: ToAssetsPath.kt
kotlin-sdk/src/nativeMain/kotlin/com/fluxtah/application/api/interop/: CCamera.kt  CEmitter.kt  CEntity.kt  CInput.kt  CJoystick.kt  CLight.kt  CPhysics.kt  CSound.kt  CSpriteBatch.kt  CSpriteElement.kt  CSpriteSheet.kt  CTextBatch.kt  CTextElement.kt  HelloCallback.kt  VulkanContext.kt
kotlin-sdk/src/nativeMain/kotlin/com/fluxtah/application/api/math/: Vector2.kt  (+3 more)
libs/src/: cJSON.c
models/: asteroid.glb
models/blocks/default/: block-default.glb
models/energy-ring/: energy-ring.glb
modules/networking/: .gitignore  CMakeLists.txt  libnetworking.dylib
modules/networking/include/: LobbyManager.h  hello.h
modules/networking/src/: LobbyManager.cpp  hello.cpp
modules/physics/: CMakeLists.txt  libphysics.dylib
modules/physics/include/: BulletDebugDrawer.h  physics.h
modules/physics/src/: BulletDebugDrawer.cpp  physics.cpp
shaders/: basic.frag  particle.comp  particle.frag  particle.vert.spv  particle2.comp  particle2.comp.spv  particle2.vert  particle2.vert.spv  sprite.vert
sheets/: courier-new.pxd  game-ui.json  game-ui.pxd
sheets/gfxsrc/: particle.pxd
src/: aabb.c  camera.c  collision.c  debug_text_overlay.c  emitter.c  entity.c  imagedata.c  imagememory.c  joystick.c  kotlin.c  main.c  modeldata.c  renderresources.c  sound.c  ubo_update.c
src/pipelines/: compute_pipeline_config.c  pipeline_config.c  pipeline_shader_util.c
src/pipelines/basic/: basic_pipeline.c  basic_pipeline_config.c  basic_pipeline_descriptor_pool.c  basic_pipeline_frag_descriptor_set_layout.c  basic_pipeline_layout.c  basic_pipeline_update_descriptor_sets.c
src/pipelines/debug/: debug_pipeline.c  debug_pipeline_config.c  debug_pipeline_renderpass.c
src/pipelines/pfx/: pfx_compute_pipeline_config.c  pfx_compute_pipeline_descriptor_pool.c  pfx_compute_pipeline_descriptor_set_layout.c  pfx_compute_pipeline_layout.c  pfx_pipeline.c  pfx_pipeline_update_descriptor_sets.c
src/pipelines/sprite/: sprite.c  sprite_pipeline.c  sprite_pipeline_config.c  sprite_pipeline_descriptor_pool.c  sprite_pipeline_frag_descriptor_set_layout.c  sprite_pipeline_layout.c  sprite_pipeline_renderpass.c  sprite_pipeline_update_descriptor_sets.c  text_sprite.c
src/vulkan/: buffer.c  commandbuffer.c  framebuffer.c  instance.c  physicaldevice.c  setup.c
(+92 files in other folders)
